Add swager docs STATS
